--- a/assets/scss/directus/_forms.scss
+++ b/assets/scss/directus/_forms.scss
@@ -296,6 +296,7 @@ select,
       padding: 44px $standardPad $largePad $largePad;
       vertical-align: top;
       width: 200px;
+      min-width: 200px;
       label {
         position: relative;
         text-transform: capitalize;
